# ViT

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  logging.conf  mypy.ini  pyproject.toml  requirements.txt  setup.py
notebooks/: model_visualization.ipynb
scripts/: config.py  train.py
src/datasets/: dataset.py
src/models/: __init__.py  attention.py  classification.py  patch_embeddings.py  vit.py
src/models/vit/: __init__.py  attention.py  classification.py  patch_embeddings.py  vit.py
src/utils/: dataset.py  model_training.py  optimizer.py  parameters.py  train_utils.py  transforms.py
tests/unit/: test_transforms.py
