[build-system]
requires = ["setuptools" ,"wheel"]

[project]
name = "ViT"
authors = [
  { name="Jose Valderrama", email="jvalderr239@gmail.com" }
]
description = "Visual Transformer for image classification"
requires-python = "==3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = [
  "matplotlib", 
  "pandas", 
  "ipykernel"
  ]

[project.urls]
"Homepage" = "https://github.com/jvalderr239/ViT"
"Bug Tracker" = "https://github.com/jvalderr239/ViT/issues"